feat: make kitchen saga commands business-idempotent